# routes/index.js
@@ -1,6 +1,19 @@
 const express = require('express');
+const passport = require('passport');
 const router = express.Router();
 
 router.use('/books', require('./books'));
+router.use('/readers', require('./readers'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function (req,res, next){
+    req.logout(function(err) {
+        if (err) { return next(err); 
+        res.redirect('/');
+        }
+    });
+})
+
 
 module.exports = router;
