# swagger-output.json
@@ -2,13 +2,13 @@
   "swagger": "2.0",
   "info": {
     "title": "API de Livros",
-    "description": "Uma API simples para gerenciar livros",
+    "description": "Uma API simples para gerenciar livros e leitores",
     "version": "1.0.0"
   },
-  "host": "books-eeav.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
@@ -159,6 +159,166 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/readers/": {
+      "get": {
+        "description": "Get all readers",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "Create a new reader",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "readerId": {
+                  "example": "1"
+                },
+                "name": {
+                  "example": "John Doe"
+                },
+                "email": {
+                  "example": "john@example.com"
+                },
+                "age": {
+                  "example": 30
+                },
+                "favoriteGenres": {
+                  "example": ["Fiction", "Mystery"]
+                },
+                "membershipDate": {
+                  "example": "2024-10-01"
+                },
+                "telephone": {
+                  "example": "+1234567890"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/readers/{id}": {
+      "get": {
+        "description": "Get a reader by ID",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Reader not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "Update a reader by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "readerId": {
+                  "example": "1"
+                },
+                "name": {
+                  "example": "John Doe"
+                },
+                "email": {
+                  "example": "john@example.com"
+                },
+                "age": {
+                  "example": 30
+                },
+                "favoriteGenres": {
+                  "example": ["Fiction", "Mystery"]
+                },
+                "membershipDate": {
+                  "example": "2024-10-01"
+                },
+                "telephone": {
+                  "example": "+1234567890"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Reader not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "Delete a reader by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Reader not found"
           },
           "500": {
             "description": "Internal Server Error"
